RESOLVED FIXED 78960
[Qt] REGRESSION(r108108): It made 3 fast/repaint tests fail
https://bugs.webkit.org/show_bug.cgi?id=78960
Summary [Qt] REGRESSION(r108108): It made 3 fast/repaint tests fail
Csaba Osztrogonác
Reported 2012-02-18 04:46:24 PST
fast/repaint/line-flow-with-floats-in-regions.html fast/repaint/overflow-flipped-writing-mode-block-in-regions.html fast/repaint/region-painting-via-layout.html
Attachments
png results compared to mac pngs (218.38 KB, patch)
2012-02-21 04:45 PST, Csaba Osztrogonác
no flags
Patch (8.63 KB, patch)
2012-02-22 07:22 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2012-02-19 09:44:12 PST
Hi Ossy, Just built latest trunk on my Linux machine and i am unable to see the failures for these tests. Is there any way to see the cause of failure for these tests? Cheers, Mihnea
Csaba Osztrogonác
Comment 2 2012-02-21 04:45:26 PST
Created attachment 127953 [details] png results compared to mac pngs Click on review patch to see the png differences.
Mihnea Ovidenie
Comment 3 2012-02-22 07:22:44 PST
Csaba Osztrogonác
Comment 4 2012-02-22 07:32:46 PST
Comment on attachment 128210 [details] Patch Thanks for the fix, r=me.
WebKit Review Bot
Comment 5 2012-02-22 08:29:22 PST
Comment on attachment 128210 [details] Patch Clearing flags on attachment: 128210 Committed r108505: <http://trac.webkit.org/changeset/108505>
WebKit Review Bot
Comment 6 2012-02-22 08:29:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.