[Qt] REGRESSION(r108108): It made 3 fast/repaint tests fail https://bugs.webkit.org/show_bug.cgi?id=78960

Reviewed by Csaba Osztrogonác.

Source/WebKit/qt:

* Api/qwebsettings.cpp:
(QWebSettingsPrivate::apply):
(QWebSettings::QWebSettings):
* Api/qwebsettings.h:

Tools:

* DumpRenderTree/qt/LayoutTestControllerQt.cpp:
(LayoutTestController::overridePreference):

LayoutTests:

* fast/repaint/japanese-rl-selection-repaint-in-regions.html:
* fast/repaint/line-flow-with-floats-in-regions.html:
* fast/repaint/overflow-flipped-writing-mode-block-in-regions.html:
* fast/repaint/region-painting-invalidation.html:
* fast/repaint/region-painting-via-layout.html:
* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/96305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108505 268f45cc-cd09-0410-ab3c-d52691b4dbfc