Source/WebKit/qt/Api/qwebsettings.h
@@ -81,6 +81,7 @@ public:
         SiteSpecificQuirksEnabled,
         JavascriptCanCloseWindows,
         WebGLEnabled,
+        CSSRegionsEnabled,
         HyperlinkAuditingEnabled
     };
     enum WebGraphic {
